<resources>
    <string name="app_name">Gentech</string>
    <string name="shop_smart_with_gentech">Shop Smart With GENTECH</string>
    <string name="google_login">Google</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="conpassword_hint">Confirm Password</string>
    <string name="login_button_text">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'\t have an account?</string>
    <string name="alrdy_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="banner_desc">Promotional Banner</string>
    <string name="featured_items">Featured Items</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="popular_items">Popular Items</string>
    <string name="item_image_desc">Item Image</string>
    <string name="category1_desc">oneplus_buds_3-earbuds</string>
    <string name="category2_desc">Samsung-Galaxy-Watch4-Smartwatches</string>
    <string name="category3_desc">Google-Pixel-6A</string>
    <string name="product1_desc">Google-Pixel-6A</string>
    <string name="product2_desc">Google-Pixel-6A</string>
    <string name="categories">Categories</string>
    <string name="featured_products">Featured Products</string>
    <string name="featured_item_1_desc">1080P Resolution\Enclosed Optical Path\Four-Way Electronic Ladder Correction\Built-in Android\3w Dual Speakers</string>
    <string name="featured_item_1_name">WANBO T2 Max Portable MINI Projector (1080p)</string>
    <string name="featured_item_1_price">Rs 53,999.00</string>
    <string name="featured_item_2_desc">Native 1080P 650 ANSI Lumens\Combined with a 64bit Amlogic T972 processor\Android TV 9.0 for Endless Entertainment\HDR 10 Visual Quality</string>
    <string name="featured_item_2_name">WANBO T6 Max Auto Focus Auto Keystone Projector for Home - Intl. Version</string>
    <string name="featured_item_2_price">Rs 79,999.00</string>
    <string name="featured_item_3_desc">Auto Focus\n450 ANSI\n4K Support\nBluetooth 5.0\nZoom Function\nWiFi 6</string>
    <string name="featured_item_3_name">Wanbo X2 Max Fully Automatic Android 1080P Smart Projector</string>
    <string name="featured_item_3_price">Rs 43,999.00</string>
    <string name="featured_item_4_desc">Android TV 11.0\n16W Speakers\nBuilt in Google Assistant\n90% DCI-P3 Color Gamut</string>
    <string name="featured_item_4_name">Wanbo Mozart 1 Pro Smart Android Projector (1080P)</string>
    <string name="featured_item_4_price">Rs 109,999.00</string>
    <string name="featured_item_5_desc"><![CDATA[Mini & Portable\nWater Resistant\nReasonably Partitioned\nScratch Resistant*\nComfortable Handle\nMetal Zippers]]></string>
    <string name="featured_item_5_name">Wanbo Projector Bag for T4/Mozart 1 Pro</string>
    <string name="featured_item_5_price">Rs 4,999.00</string>
    <string name="new_item_1_desc">1100 ANDI Brightness\nAuto-Focus\n10W Stereo Sounds\nHidden Bracket\nDual-Band WiFi 6\n1080P Native</string>
    <string name="new_item_1_name">Wanbo X5 Full HD Native 1080P Android Smart Projector</string>
    <string name="new_item_1_price">Rs 69,999.00</string>
    <string name="new_item_2_desc"><![CDATA[1944P Resolution & HDR\n24H Smart Parking Surveillance\nBuilt-In GPS & GLONASS\nExpanded ADAS\neMMC Built-in Storage\nTPMS Compatible\n128GB Storage]]></string>
    <string name="new_item_2_name">70mai Dash Cam M500</string>
    <string name="new_item_2_price">Rs 41,999.00</string>
    <string name="new_item_3_desc"><![CDATA[316L Stainless Steel\nPeak 1,000nit Brightness\nUltra-low Temperature Operation\nStrong & Accurate Dual-band GPS\n30m Freediving Support\nStrength Exercise Recognition\nHealth-centered Zepp OS 2.0\nUp to 20-day Battery Life]]></string>
    <string name="new_item_3_name">Amazfit T-Rex Ultra Ultimate Outdoor GPS Smartwatch</string>
    <string name="new_item_3_price">Rs 125,999.00</string>
    <string name="new_item_4_desc">Ultra-Precise Lenses\n600 ANSI Lumens\nHey Google Support\nPixelPro 5.0 Enclosed Optical Engine\n2x8W Speakers\n1080P Full HD</string>
    <string name="new_item_4_name">Wanbo DaVinci 1 Pro 1080p Smart Android Projector</string>
    <string name="new_item_4_price">Rs 89,999.00</string>
    <string name="new_item_5_desc"><![CDATA[Powerful 200W Stereo Sound\nDynamic 2.2 Channel System\n2 Wireless Microphones included & Inputs for 1 Wired Microphone\nLive Streaming & Live Monitoring\nRemote Control\nBuilt-in 24000mAh Battery]]></string>
    <string name="new_item_5_name">SOUNARC K2 Karaoke Party Speaker</string>
    <string name="new_item_5_price">Rs 49,999.00</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="see_more">see more</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_cart">Cart</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AppDesc">Unlock a world of exclusive deals and discounts on the latest and greatest tech gadgets. From cutting-edge smartphones to high-fidelity headsets, GENTECH offers unbeatable prices on a wide range of products. Enjoy fast and reliable shipping directly to your doorstep, ensuring you get your new gear quickly and hassle-free. Read in-depth reviews and ratings from other tech enthusiasts to make informed and confident purchasing decisions. Experience the convenience and reliability of GENTECH, your one-stop shop for all things tech.</string>


</resources>